feature: API register
